@@ -8,6 +8,7 @@
 * Fix race condition updating widgets before they can be created after cycling
   device handle.
 * Fix 16-bit PNM parsing
+* Fix Perl warning about redundant argument in sprintf
 
 
 1.8.7 (22.09.2017):
